--- a/Later/build.gradle
+++ b/Later/build.gradle
@@ -5,30 +5,45 @@ buildscript {
         maven {
             url 'https://raw.github.com/ark/ark/master/releases/'
         }
+        maven { url 'http://download.crashlytics.com/maven' }
+
+
+        dependencies {
+            classpath 'com.android.tools.build:gradle:0.6.+'
+            classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+
+        }
+
     }
 
 }
 
 apply plugin: 'android'
+apply plugin: 'crashlytics'
 
 repositories {
     mavenCentral()
+    maven { url 'http://download.crashlytics.com/maven' }
+
 }
 
 android {
-    compileSdkVersion 17
-    buildToolsVersion '17'
+    compileSdkVersion 18
+    buildToolsVersion '18.1.1'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 19
+        targetSdkVersion 18
     }
 }
 
 
 dependencies {
-	compile 'com.android.support:support-v4:+'
-	compile 'com.android.support:support-v13:+'
-    compile project(':libraries:swipelistview')
-
+    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v13:+'
+    compile project(':libraries:datetimepicker-library')
+    compile files('libs/crouton-1.8.1.jar')
+    compile files('libs/undobar-0.3.jar')
+    compile files('libs/com.haarman.listviewanimations-2.5.2.jar')
+    compile 'com.crashlytics.android:crashlytics:1.+'
 }
