--- a/Later/src/main/AndroidManifest.xml
+++ b/Later/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/later_logo"
@@ -21,7 +26,8 @@
         <activity
             android:name="com.iheanyiekechukwu.later.activities.ComposeActivity"
             android:label="@string/title_activity_compose"
-            android:parentActivityName="com.iheanyiekechukwu.later.activities.AlternateActivity" >
+            android:parentActivityName="com.iheanyiekechukwu.later.activities.AlternateActivity"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name="com.iheanyiekechukwu.later.activities.AlternateActivity"
@@ -33,6 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.crashlytics.ApiKey" android:value="57f048c026e0a0ef0167d46eff1c16efd17104b1"/>
     </application>
 
 </manifest>
